# pkgx

./: .gitattributes  .gitignore  FEATURES.md  Makefile  README.md  TESTING.md  docker-tests.py  pyproject.toml  test_pkgx.py  test_upm.py
.github/workflows/: test.yml
pkgx/: __init__.py  cli.py  managers.py
upm/: __init__.py  cli.py  managers.py
